<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameIn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/nameText"
        android:hint="@string/name"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/phoneId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneId"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameIn"
        android:layout_toEndOf="@+id/numText"
        android:hint="@string/mobile_no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <EditText
        android:id="@+id/emailIn"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_below="@id/phoneId"
        android:layout_toEndOf="@+id/numText"
        android:hint="@string/a_gmail_com"

        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toEndOf="@+id/emailText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/numText"
        app:layout_constraintEnd_toStartOf="@+id/nameIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="75dp"
        android:layout_height="34dp"
        android:layout_below="@+id/numText"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <TextView
        android:id="@+id/numText"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_below="@+id/nameText"

        android:text="@string/phone"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="189dp"
        android:layout_height="211dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" >


        <RadioButton
            android:id="@+id/checkCs"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="@string/cs"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            />

        <RadioButton
            android:id="@+id/checkIs"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="@string/is"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"/>

        <RadioButton
            android:id="@+id/checkEc"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="@string/ec"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/dep_text_id"
        android:layout_width="172dp"
        android:layout_height="41dp"
        android:text="@string/department"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />

    <TextView
        android:id="@+id/cgpaText"
        android:layout_width="87dp"
        android:layout_height="37dp"
        android:text="@string/cgpa"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <EditText
        android:id="@+id/cgpaIn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/cgpaText"
        android:hint="@string/cgpa"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/cgpaText"
        app:layout_constraintTop_toBottomOf="@+id/emailIn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submit"
        android:layout_width="144dp"
        android:layout_height="57dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <ImageView
        android:id="@+id/pic"
        android:layout_width="103dp"
        android:layout_height="138dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/upload_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pic"
        android:layout_alignParentEnd="true"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

</androidx.constraintlayout.widget.ConstraintLayout>